adding motion to scroller

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
+    "framer": "^2.4.1",
+    "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
