--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "framer": "^2.4.1",
+    "framer-motion": "^11.0.6",
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
