--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "flowbite-react": "^0.7.2",
     "framer": "^2.4.1",
     "framer-motion": "^11.0.6",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.7.3",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "typescript": "^3.9.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
